feat: implement verification
