# backend/internal/http/dto/user.go
@@ -47,3 +47,7 @@ type ChangePasswordRequest struct {
 	OldPassword string `json:"old_password" validate:"required"`
 	NewPassword string `json:"new_password" validate:"required"`
 }
+
+type VerifyEmailByTokenRequest struct {
+	Token string `json:"token" validate:"required"`
+}
